<resources>
    <string name="app_name">Cat in the Hat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="the_cat_text">The Cat</string>
    <string name="thing_one_text">Thing 1</string>
    <string name="thing_two_text">Thing 2</string>
    <string name="thingamajigger_text">Thingamajigger</string>
    <string name="sally_text">Sally</string>
    <string name="nick_text">Nick</string>
    <string name="dr_seuss_text">Dr. Seuss</string>
</resources>
