<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/the_cat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Button.Udacious"
        android:text="@string/the_cat_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/thing_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button.Udacious"
            android:text="@string/thing_one_text"/>

        <Button
            android:id="@+id/thing_two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button.Udacious"
            android:text="@string/thing_two_text"/>

    </LinearLayout>

    <Button
        android:id="@+id/thingamajigger_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Button.Udacious"
        android:text="@string/thingamajigger_text"/>

    <Button
        android:id="@+id/sally_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Button.Udacious"
        android:text="@string/sally_text" />

    <Button
        android:id="@+id/nick_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Button.Udacious"
        android:text="@string/nick_text" />

    <Button
        android:id="@+id/dr_seuss_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Button.Udacious"
        android:text="@string/dr_seuss_text"/>


</LinearLayout>
